--- a/main.html
+++ b/main.html
@@ -29,11 +29,34 @@
             <p class="one">Helping Others</p>
             <p class="two">LIVE & TRAVEL</p>
             <p class="three">Special offers to suit your plan</p>
+        </div> 
+        <div class="searchbox">
+            <div class="tabs">
+                <button class="tablink">Flights</button>
+                <button class="tablink">Stays</button>
+            </div>
+            <!--tab contents below-->
+            <div class="flights">
+                <fieldset>
+                    <legend>From-To</legend>
+                </fieldset>
+                <fieldset>
+                    <legend>Trip</legend>
+                </fieldset>
+                <fieldset>
+                    <legend>Depart-Return</legend>
+                </fieldset>
+                <fieldset>
+                    <legend>Passenger-Class</legend>
+                </fieldset>
+            </div>
+            <div class="submit">
+                <input type="button" value="Add Promocode">
+                <input type="submit" value="Show Flights"> 
+            </div>
         </div>  
     </div>
-    <div class="searchbox">
-        
-    </div>
+ 
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 </body>
